# extracao-movimento

./: .gitignore  LICENSE  README.md  extrator-movimento.py
v2/: CMakeLists.txt  build.sh  run.sh
v2/src/: core.cpp  core.h  main.cpp  mainwindow.cpp  mainwindow.h  player.cpp  player.h  processor.cpp  processor.h
